Respect the maximum file size when creating thumbnails for directories.

BUG: 202960

svn path=/trunk/KDE/kdebase/runtime/; revision=1011074